<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <RelativeLayout
        android:id="@+id/scores"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
  <!--  <TextView
        android:id="@+id/highScore"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="100sp"
        android:textStyle="bold"
        android:textColor="#1edaaf37"/>

    <TextView
        android:id="@+id/highScoreTitle"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="100sp"
        android:textColor="#284376da"/>-->
        <TextView
            android:id="@+id/titleSongName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginTop="80sp"
            android:layout_marginBottom="-5sp"
            android:layout_marginRight="40sp"
            android:textColor="#932d51ff"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/titleArtistName"
            android:layout_below="@id/titleSongName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginRight="40sp"
            android:textColor="#5a0c24ff"
            android:textSize="15sp"
            android:layout_marginBottom="10sp"/>
        <LinearLayout
            android:id="@+id/musicLinearLayout"
            android:layout_below="@id/titleArtistName"
            android:layout_width="fill_parent"
            android:layout_marginRight="140sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/titlePrevSong"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:textStyle="bold"
                android:background="@android:drawable/screen_background_light_transparent"
                android:text="@string/song_prev_temp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_dark_nodisable"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/buttonDivider"/>
            <Button
                android:id="@+id/titlePlaySong"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:textStyle="bold"
                android:background="@android:drawable/screen_background_light_transparent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_dark_nodisable"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/buttonDivider"/>
            <Button
                android:id="@+id/titleNextSong"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:textStyle="bold"
                android:background="@android:drawable/screen_background_light_transparent"
                android:text="@string/song_next_temp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_dark_nodisable"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/buttonDivider"/>
            <Button
                android:id="@+id/music_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:background="@android:drawable/screen_background_light_transparent"
                android:text="M"/>
            </LinearLayout>

        <RelativeLayout
            android:id="@+id/music_options"
            android:layout_above="@id/musicLinearLayout"
            android:padding="10sp"
            android:visibility="gone"
            android:layout_marginLeft="15sp"
            android:layout_marginBottom="-5sp"
            android:background="@android:color/darker_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/start_music"
                android:text="@string/music_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/stop_music"
                android:layout_below="@id/start_music"
                android:text="@string/music_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/gameFrame"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textColor="@android:color/darker_gray"
        android:textSize="60sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

    <Button
        android:id="@+id/start"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/toggle_buttons"
        android:text="@string/begin"
        android:textSize="30sp" />

    <Button
        android:id="@+id/options"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/start"
        android:layout_centerHorizontal="true"
        android:background="@drawable/toggle_buttons"
        android:text="@string/optionsButton"
        android:textSize="30sp" />

      <!--  <Button
            android:id="@+id/about"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_below="@id/options"
            android:layout_centerHorizontal="true"
            android:background="@drawable/toggle_buttons"
            android:text="@string/aboutButton"
            android:textSize="30sp" />-->
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:textColor="@android:color/secondary_text_dark_nodisable"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/tileScreenAbout"/>
        <TextView
            android:id="@+id/titleExit"
            android:layout_width="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:textColor="@android:color/secondary_text_dark_nodisable"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/tileScreenExit"/>
        </LinearLayout>
</RelativeLayout>
